--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <p class="weekdays"> Saturday</p> </div>
             
 
-<p><a href="url">open source code /a> by Jacquie Shelley</p>
+<p><a href="https://genuine-gumption-484bd1.netlify.app/" open source code></a>/a> by Jacquie Shelley</p>
 
     <script src="src/index.js"></script>
   </body>
