Updates to footer

--- a/index.html
+++ b/index.html
@@ -158,10 +158,13 @@ id="icon"/>
                         <p class="weekdays"> Friday </p> </div>
                     <div class="col-2">
                         <p class="weekdays"> Saturday</p> </div>
+
+                    </br>
+                  </br>
             
-
-<p><a href="https://genuine-gumption-484bd1.netlify.app/">Open Source Code </a> by Jacquie Shelley </p>
-
+<footer> <a href="https://genuine-gumption-484bd1.netlify.app/">Open Source Code</a>  by Jacquie Shelley </footer>
+</br>
+</br>
     <script src="src/index.js"></script>
   </body>
 </html>
