--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ id="icon"/>
                   </br>
                 </div>   </div>     </div> 
 
-<footer> <a href="https://genuine-gumption-484bd1.netlify.app/">Open Source Code</a>  by Jacquie Shelley </footer>
+<footer> <a href="https://github.com/jacshelley/She-Codes-Weather-App-">Open Source Code</a>  by Jacquie Shelley </footer>
 
 
     <script src="src/index.js"></script>
